[package]
name = "autograf"
version = "0.1.0"
authors = ["dumitru.stama <dumitru.stama@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
hexdump = "0.1.0"

[lib]
name = "persrc"
path = "src/lib.rs"

[[bin]]
name = "autograf"
path = "src/main.rs"

[dependencies.mytree]
path = "mytree"

[workspace]
members = [
        "mytree",
]

